--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,8 @@
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
 
+    <style name="BackGroundInicio">
+        <item name="android:background">@drawable/background</item>
+    </style>
+
 </resources>
