--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
-
-    <!--
-    <LinearLayout
-	    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:orientation="vertical" >
-    -->
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
         android:gravity="center"
         android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/categoria_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical" >
         </LinearLayout>
@@ -36,7 +29,7 @@
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#56382B"
-            android:textSize="15sp" />
+            android:textSize="9sp" />
         <!-- </LinearLayout> -->
     </LinearLayout>
 
