--- a/app/src/main/res/layout/pantalla_categoria.xml
+++ b/app/src/main/res/layout/pantalla_categoria.xml
@@ -160,8 +160,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:numColumns="1"
-                            android:scrollbars="vertical"
+                            android:columnWidth="80dp"
+                            android:numColumns="3"
+                            android:scrollbars="horizontal"
                             android:soundEffectsEnabled="true"
                             android:stretchMode="columnWidth" >
                         </GridView>
